--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-mdx": "^2.11.0",
     "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-plugin-styled-components": "^4.11.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-transformer-sharp": "^3.11.0",
     "react": "^17.0.1",
